--- a/index.html
+++ b/index.html
@@ -25,18 +25,14 @@
                     </div>
                 </div>
                 <div id="next">></div>
-                <input placeholder="パスワード" type="password" id="login-password" tabindex="2">
+                <input placeholder="Enter Password" type="password" id="login-password" tabindex="2">
                 <button id="login-button" type="submit" tabindex="3">
-                    ログイン
+                    Login
                 </button>
             </form>
         </div>
     </div>
-    
-    <!-- <div id="login-bar">
-        <img id="login-shutdown" src="static/action-shutdown.png" onclick="lightdm.shutdown();">
-        <img id="login-restart" src="static/action-reboot.png" onclick="lightdm.restart();">
-    </div> -->
+
     <script src="js/mock.js"></script>
     <script src="js/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
